
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_book"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/darkGray"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        card_view:cardCornerRadius="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/book_thumb_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/book_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/book_thumb_image"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/book_reviewer_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/author"
                android:textColor="@android:color/holo_blue_dark"
                card_view:layout_constraintStart_toEndOf="@+id/book_thumb_image"
                card_view:layout_constraintTop_toBottomOf="@+id/book_name" />

            <TextView
                android:id="@+id/book_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/genere"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="14sp"
                card_view:layout_constraintStart_toEndOf="@+id/book_thumb_image"
                card_view:layout_constraintTop_toBottomOf="@+id/book_reviewer_mail" />

            <RatingBar
                android:id="@+id/book_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.1"
                card_view:layout_constraintStart_toEndOf="@+id/book_thumb_image"
                card_view:layout_constraintTop_toBottomOf="@+id/book_genre" />

            <TextView
                android:id="@+id/book_price"
                android:layout_width="66dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/x_x"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/book_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/book_rating" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>